Apply more automated refactors